started synthesis for agu23 notebook version

--- a/notebooks/explore_temperature.ipynb
+++ b/notebooks/explore_temperature.ipynb
@@ -1115,11 +1115,136 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Time-history models: GHGs(t-h:t) -> temperature(t)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Linear pattern scaling: global tas + tas diff -> local tas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'Y_train' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/mnt/c/Users/Bjoern/code/climate-emulator-tutorial/notebooks/explore_temperature.ipynb Cell 42\u001b[0m line \u001b[0;36m6\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/Bjoern/code/climate-emulator-tutorial/notebooks/explore_temperature.ipynb#X61sdnNjb2RlLXJlbW90ZQ%3D%3D?line=3'>4</a>\u001b[0m data_var \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mtas\u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/Bjoern/code/climate-emulator-tutorial/notebooks/explore_temperature.ipynb#X61sdnNjb2RlLXJlbW90ZQ%3D%3D?line=4'>5</a>\u001b[0m skip_historical_scenarios \u001b[39m=\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mssp126\u001b[39m\u001b[39m'\u001b[39m, \u001b[39m'\u001b[39m\u001b[39mssp370\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m# Scenarios for which we'll drop historical data, because it'd be duplicate otherwise\u001b[39;00m\n\u001b[0;32m----> <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/Bjoern/code/climate-emulator-tutorial/notebooks/explore_temperature.ipynb#X61sdnNjb2RlLXJlbW90ZQ%3D%3D?line=5'>6</a>\u001b[0m var_global_hist, var_local \u001b[39m=\u001b[39m interim_to_global_diff_local(Y_train\u001b[39m.\u001b[39mcopy(), \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/Bjoern/code/climate-emulator-tutorial/notebooks/explore_temperature.ipynb#X61sdnNjb2RlLXJlbW90ZQ%3D%3D?line=6'>7</a>\u001b[0m     data_var\u001b[39m=\u001b[39mdata_var,\n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/Bjoern/code/climate-emulator-tutorial/notebooks/explore_temperature.ipynb#X61sdnNjb2RlLXJlbW90ZQ%3D%3D?line=7'>8</a>\u001b[0m     len_historical\u001b[39m=\u001b[39mlen_historical, \n\u001b[1;32m      <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/Bjoern/code/climate-emulator-tutorial/notebooks/explore_temperature.ipynb#X61sdnNjb2RlLXJlbW90ZQ%3D%3D?line=8'>9</a>\u001b[0m     scenario_keys\u001b[39m=\u001b[39mscenarios_train,\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/Bjoern/code/climate-emulator-tutorial/notebooks/explore_temperature.ipynb#X61sdnNjb2RlLXJlbW90ZQ%3D%3D?line=9'>10</a>\u001b[0m     skip_historical_scenarios\u001b[39m=\u001b[39mskip_historical_scenarios)\n\u001b[1;32m     <a href='vscode-notebook-cell://wsl%2Bubuntu/mnt/c/Users/Bjoern/code/climate-emulator-tutorial/notebooks/explore_temperature.ipynb#X61sdnNjb2RlLXJlbW90ZQ%3D%3D?line=10'>11</a>\u001b[0m var_global_hist\u001b[39m.\u001b[39mshape, var_local\u001b[39m.\u001b[39mshape\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'Y_train' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "from emcli.dataset.interim_to_processed import interim_to_global_diff_local\n",
+    "\n",
+    "# Extract globally-averaged tas and smoothened time-difference tas(t)-tas(t-1) from Y_train\n",
+    "data_var = 'tas'\n",
+    "skip_historical_scenarios = ['ssp126', 'ssp370'] # Scenarios for which we'll drop historical data, because it'd be duplicate otherwise\n",
+    "var_global_hist, var_local = interim_to_global_diff_local(Y_train.copy(), \n",
+    "    data_var=data_var,\n",
+    "    len_historical=len_historical, \n",
+    "    scenario_keys=scenarios_train,\n",
+    "    skip_historical_scenarios=skip_historical_scenarios)\n",
+    "var_global_hist.shape, var_local.shape"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "# Fit multivariate polynomial pattern scaling, i.e., fit one multivariate polynomial to each grid cell\n",
+    "\n",
+    "# Adapted from: https://stackoverflow.com/a/31467522\n",
+    "\n",
+    "# 3-samples, bivariate inputs, 2 outputs per input:\n",
+    "# X_inputs = np.array([[0.44, 0.68], [0.99, 0.23], [0.22, 0.45]]) # (n_samples, n_features)\n",
+    "# Y_targets = np.array([[109.85, 155.72], [100., 109.85], [155.72, 100.]]) # (n_samples, n_gridpoints)\n",
+    "\n",
+    "print('shapes:, ', var_local.shape, var_global_hist[:,0].shape)\n",
+    "\n",
+    "# Preprocess inputs and targets\n",
+    "X_inputs = var_global_hist # (n_samples, 2)\n",
+    "Y_targets = var_local # (n_samples, lat, lon, 1)\n",
+    "Y_targets = var_local.reshape((var_local.shape[0],-1)) # (n_samples, lat*lon)\n",
+    "\n",
+    "# Expand the inputs with polynomial features up to n_degrees, e.g., for degree 2 it'll be [1,x,x**2]\n",
+    "n_degrees = 1\n",
+    "poly = PolynomialFeatures(degree=n_degrees)\n",
+    "X_inputs_ = poly.fit_transform(X_inputs)\n",
+    "\n",
+    "# Generate the regression object\n",
+    "clf = LinearRegression()\n",
+    "# Fit regression model\n",
+    "clf.fit(X_inputs_, Y_targets)\n",
+    "\n",
+    "print(\"inputs = (n_samples, n_features) = \",X_inputs.shape)\n",
+    "print(\"inputs_ = (n_samples, n_features*n_degrees!) = \",X_inputs_.shape)\n",
+    "print(\"targets = (n_samples, n_gridpoints) = \",Y_targets.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Run inference with multivariate polynomial pattern scaling\n",
+    "from emcli.dataset.interim_to_processed import interim_to_global_diff_local\n",
+    "\n",
+    "n_lat,n_lon = Y_test[0][data_var].shape[1:]\n",
+    "\n",
+    "# Convert interim to processed data\n",
+    "var_global_hist_test, var_local_test = interim_to_global_diff_local(Y_test.copy(), \n",
+    "    data_var=data_var,\n",
+    "    len_historical=len_historical, \n",
+    "    scenario_keys=scenarios_test,\n",
+    "    skip_historical_scenarios=[])\n",
+    "var_global_hist_test.shape\n",
+    "\n",
+    "#predict is an independent variable for which we'd like to predict the value\n",
+    "X_test_inputs = var_global_hist_test\n",
+    "X_test_inputs_ = poly.fit_transform(X_test_inputs) # Transform to model type\n",
+    "preds_ps_multivariate = clf.predict(X_test_inputs_)\n",
+    "preds_ps_multivariate = preds_ps_multivariate.reshape((-1, n_lat, n_lon))\n",
+    "\n",
+    "print(\"inputs_test = (n_samples_test, n_features*n_degrees) = \",X_test_inputs_.shape)\n",
+    "print(\"Prediction = (n_samples_test, n_gridpoints)\",preds_ps_multivariate.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Plot error map\n",
+    "from emcli.utils.plotting import plot_tas_annual_local_err_map\n",
+    "\n",
+    "coords_test = Y_test[0][data_var].drop_isel(time=0).coords # drop the first time element due to the temporal shifting\n",
+    "var_local_test_xr = xr.DataArray(data=var_local_test[...,0], \n",
+    "    coords=coords_test)\n",
+    "preds_ps_multivariate_xr = xr.DataArray(data=preds_ps_multivariate, \n",
+    "    coords=coords_test) # convert predictions into axarray\n",
+    "axs = plot_tas_annual_local_err_map(var_local_test_xr, preds_ps_multivariate_xr, data_var=data_var)\n",
+    "axs[1].set_title(f'Linear Time-difference Model:\\n Linear map: global CO2 -> global tas \\n Linear map: global tas, global T diff -> local {data_var} \\n trained on 1850-2100. Tested on held-out {scenarios_test[0]}')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
