seems okay to submit to agu23 or peer review

--- a/climate_emulator_tutorial.ipynb
+++ b/climate_emulator_tutorial.ipynb
@@ -247,7 +247,8 @@
     "\n",
     "# Data visualization\n",
     "import matplotlib.pyplot as plt\n",
-    "import cartopy\n",
+    "import cartopy.crs as ccrs\n",
+    "import matplotlib.colors as colors\n",
     "\n",
     "# Data manipulation\n",
     "import pandas as pd\n",
@@ -547,9 +548,6 @@
     }
    ],
    "source": [
-    "import cartopy.crs as ccrs\n",
-    "import matplotlib.colors as colors\n",
-    "\n",
     "# Select ssp245 and surface temperatures from validation dataset\n",
     "data_var = 'tas'\n",
     "tas_true = Y_test[0][data_var]\n",
@@ -869,7 +867,7 @@
     "\n",
     "Below, we can see the ground-truth surface temperature anomalies in the held-out scenario (ssp245), averaged over 2080-2100 (left). The time-averaged linear model prediction is displayed in the middle. The plot on the right shows the error: prediction - target. \n",
     "\n",
-    "We can see that the linear model is surprisingly good. It accurately predicts the global warming patterns of a hotter Arctic, hotter land, North Atlantic warming hole. Creating the error plot reveals that the linear model overpredicts warming in the North Atlantic, Russian Arctic,a and the coast of the Larsen ice shelf. The linear model underpredicts warming in the Greenland sea."
+    "We can see that the linear model is surprisingly good. It accurately predicts the global warming patterns of a hotter Arctic, hotter land, North Atlantic warming hole. Creating the error plot reveals that the linear model overpredicts warming in the North Atlantic, Russian Arctic, and the Weddel Sea in the Southern Ocean next to the Larsen ice shelf. The linear model underpredicts warming in the Greenland sea."
    ]
   },
   {
@@ -932,14 +930,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### todo: Insert CNN-LSTM"
+    "### CNN-LSTM: Comparison with a large deep learning model"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Surprisingly the NRMSE of the CNN-LSTM is higher than the linear model. This likely confirms our hypothesis that there was not sufficient data available for the model complexity of the CNN-LSTM. "
+    "We know compare the linear pattern scaling model with the CNN-LSTM model in ClimateBench. The CNN-LSTM was trained and tested on the same dataset and data split -- holding out ssp245. However, CNN-LSTM uses globally-averaged methane (ch4), local maps of sulfur dioxide (so2), and local maps of black carbon (bc) as additional inputs. Further, the CNN-LSTM is trained and tested on time-snippets of length 10. The comparison between CNN-LSTM and our linear pattern scaling model is still fair, because the data in the linear pattern scaling is a strict subset of the CNN-LSTM data. In summary, the linear pattern scaling and CNN-LSTM models were trained on the following mapping:\n",
+    "\n",
+    "- $f_{linear}: co2_{global-avg}(t) \\in \\mathbb{R} \\rightarrow tas_{0:lat, 0:lon}(t) \\in \\mathbb{R}^{(lat, lon)}$\n",
+    "- $f_{cnn-lstm}: [co2_{global-avg}(t{-}10{:}t), ch4_{global-avg}(t{-}10{:}t), so2_{0:lat, 0:lon}(t{-}10{:}t), bc_{0:lat, 0:lon}(t{-}10{:}t)] \\in \\mathbb{R}^{10} \\times \\mathbb{R}^{10} \\times \\mathbb{R}^{(lat,lon,10)} \\times \\mathbb{R}^{(lat,lon,10)} $\n",
+    "    $\\rightarrow tas_{0:lat, 0:lon}(t) \\in \\mathbb{R}^{(lat, lon)}$\n",
+    "\n",
+    "Further details on the CNN-LSTM model are described in the ClimateBench paper.\n",
+    "\n",
+    "Now, we compare the accuracy of CNN-LSTM vs. Linear Pattern Scaling. First, we plot the error maps (sourced from Fig. 4 and Fig. A2 in the ClimateBench). We can see that the CNN-LSTM has comparitively little error in the North Atlantic Warming Hole, Weddel Sea, and Greenland Sea. Therefore, the CNN-LSTM has a substantial bias to over (under-) predict warming in the Northern (Southern) hemisphere, respectively. From the error plots, it seems like the Linear Pattern Scaling model and CNN-LSTM model have complementary errors.\n",
+    "\n",
+    "Surprisingly the NRMSE of the CNN-LSTM is 0.107, which is higher than the Linear Pattern Scaling NRMSE of 0.080. This indicates our hypothesis that there was not sufficient data available for the model complexity of the CNN-LSTM was likely true."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![ClimateBench CNN-LSTM](docs/figures/tutorial/tas_ssp245_2080_2100/climatebench.png)"
    ]
   },
   {
@@ -947,9 +962,9 @@
    "metadata": {},
    "source": [
     "## Data vs. model complexity: Polynomial Pattern Scaling\n",
-    "Are very large deep learning models necessary or is linear model just fine? Here, we saw that a linear model achieves most of the accuracy. Nevertheless, we learned that the data is not entirely linear. To find the best model complexity, we're demonstrating a new plot: Performance vs. model complexity. If the best performing model is one with low complexity we know that our task is likely not very complex or inherently data limited. \n",
+    "The fact that a linear model outperforms a large deep learning model brings us to the question if more complex models are necessary at all or if a linear model is just fine, for this task? Here, we saw that a linear model achieves most of the accuracy. Nevertheless, we learned that the data is not entirely linear, e.g., in the Arctic. To find the best model complexity, we're demonstrating a new plot: Performance vs. model complexity. If the best performing model is one with low complexity we know that our task is likely not very complex or inherently data limited. \n",
     "\n",
-    "To plot performance vs. model complexity we slightly modify the model from above. Instead of fitting a linear curve to every grid cell, we are now fitting a polynomial of degree n to each grid cell. Every grid cell has the same polynomial degree, but coefficients that are independent of the other grid cells. The model complexity is determinded by the polynomial degree."
+    "To plot performance vs. model complexity we slightly modify the Linear Pattern Scaling model from above. Instead of fitting a linear curve to every grid cell, we are now fitting a polynomial of degree n to each grid cell. Every grid cell has the same polynomial degree, but coefficients that are independent of the other grid cells. The model complexity is determinded by the polynomial degree."
    ]
   },
   {
@@ -1059,9 +1074,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The above plot shows that increasing model complexity can indeed improve the performance of our model. So, we pick the 5th order polynomial and show the error plot below. The NRMSE is 0.068 which is better than the linear model. It is possible that the model could be further improved by increasing the data with more scenarios, taking more assumptions about the data, e.g., by fitting a different polynomial degree to the North Atlantic warming hole than the other grid cells, or using a very small fully-connected neural network per grid cell instead of a polynomial.\n",
+    "The above plot shows that increasing model complexity can indeed improve the performance of our model. So, we pick the 5th order polynomial and show the error plot below. The NRMSE is 0.068 which is better than the linear model.\n",
     "\n",
-    "Overall, however, the accuracy we get with the polynomial fit seems very cloes to the best possible model in this evaluation. Particularly, the internal variability within the NorEMS2 data is very high with only three realizations. To better evaluate which errors originate in the model vs. internal variability, we would recommend to plot a map of internal variability, e.g., variance across realizations or years, next to the error map."
+    "This plots indicates the a linear model (polynomial of 1st degree) is likely underfitting and a polynomial of higher order than 5 is likely overfitting the data. It is possible that the model could be further improved by increasing the data with more scenarios, taking more assumptions about the data, e.g., by fitting a different polynomial degree to the North Atlantic warming hole than the other grid cells, or using a very small fully-connected neural network per grid cell instead of a polynomial.\n",
+    "\n",
+    "Overall, however, the accuracy we get with the polynomial fit seems very close to the best possible model in this evaluation. Particularly, the internal variability within the NorEMS2 data is very high with only three realizations. Increasing the model complexity will likely overfit on the internal variability. To better evaluate which errors originate in the model vs. internal variability, we would recommend to plot a map of internal variability, e.g., variance across realizations or years, next to the error map."
    ]
   },
   {
@@ -1122,39 +1139,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "oHIjM6eMwlXY"
-   },
+   "metadata": {},
    "source": [
-    "## Limitations:\n",
-    "Seasonal Variation:\n",
-    "- The time-instant and annually-averaged model does not model time history and monthly variations. As a result, multi-year patterns, such as ENSO, and seasonal patterns (Winter, Spring, Summer, etc.) are not captured. The seasonal patterns could be captured by taking month as input:\n",
-    "- Monthly time-instant mapping:\n",
-    "  - $[co2_{global-mean}(t), \\sin(t_\\text{month}), \\cos(t_\\text{month})] \\in \\mathbb{R}^3 \\rightarrow tas_{0:Lat, 0:Lon}(t) \\in \\mathbb{R}^{(Lat, Lon)}$\n",
-    "  - $t_\\text{month} = \\{0°,30°,60°,...330°\\}$ for $\\{\\text{Jan., Feb., ..., Dec.}\\}$\n",
-    "\n",
-    "\n",
-    "Others:\n",
-    "\n",
-    "Emulation of the future climate poses particular challenges for machine learning due to the limited amount of training data. Current ML approaches struggle to learn such complex scenarios in small data regimes. As noted earlier, the complex models that are used for modeling are computationally expensive, and there is no information about unseen future scenarios. Furthermore, to build trust in climate emulators for policymakers, model verification is attempted to assert its accuracy objectively. However, this is formally impossible for the Earth, so model evaluation must be completed and relies on underlying physical principles to reassure its broader validity.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "8c03qb9eeIhi"
-   },
-   "source": [
-    "In this tutorial, we use a pure ML approach instead of a hybrid physics machine learning. Hybrid physics ML presents a few broader challenges. Most notably, it is challenging to bring together and integrate i.e. statistics, uncertainty quantification, physics, etc. There is also a challenge of balancing the competing demands of hard and soft constraints to develop a model that accurately captures the physics while also being flexible enough to capture the complexities of the problem. This requires careful consideration of the underlying physics and expertise in ML techniques and optimization methods."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "IHsq5ZgreQEW"
-   },
-   "source": [
-    "Lastly, when it comes to uncertainty quantification, estimating the model (epistemic) and data (aleatoric) uncertainty in and with ML models, respectively, is still an open research field. However, addressing these challenges is crucial to improving the usefulness, reliability, and trust of ML emulators, particularly in an application like this where accurate climate risks, such as likelihood of freezing days in March, number of heat days, distribution over storm surge heights, etc., are critical for decision-makers to enact adequate climate adaptation and mitigation measures."
+    "To summarize, we have seen that one can emulate the relationship between co2 emissions and local temperature by using a linear model. Surprisingly, the linear model outperforms deep learning models on this task. This underlines the importance of starting simple: whenever we'd like to show that large ML models are good for something it's good to start with a linear model. Further, using ML needs a rigorous description of train/val/test splits to avoid overfitting on spurious correlations or internal variability. Lastly, there's 20PB in the CMIP6 data and it is significant effort to select the in-/output variables that are most interesting for research. Here, we conclude that ML research might be an overkill for emulating annually-averaged mean surface temperature anomalies and think that it might be better suited for emulating more complex variables, such as local aerosols or extreme value statistics. "
    ]
   },
   {
@@ -1166,23 +1153,17 @@
     "## Next Steps:\n",
     "This tutorial only gives a short insight into machine learning in climate science. There exist many outstanding challenges and we refer to some here:\n",
     "\n",
-    "- Other models:\n",
-    "  - end-to-end emulator: init temp + global co2 over time -> temp at 2030\n",
-    "- Other metrics:\n",
-    "  -\tExtremes:\n",
-    "    - plot probability distribution of temp.\n",
-    "  -\tResponse surfaces:\n",
-    "    -\tglobal co2 -> global temp., co2 -> boston temp., co2 -> beijing temp, etc.\n",
-    "-\tCommon Issues:\n",
-    "  - Dataset size, CPU vs. GPU\n",
-    "\n",
-    "- Open Challenges:\n",
-    "  -\tExtreme measurement\n",
-    "  -\tExtend to more data via cesm-emulator notebook\n",
-    "\n",
-    "*   What do you imagine would be the next steps for your readers after finishing your tutorial?\n",
-    "*   Discuss other potential climate-related applications for the method or tool discussed in the tutorial.\n",
-    "*   Do you know of other climate-related datasets similar to the one used in this tutorial? List them here."
+    "- Modeling more complex variables:\n",
+    "  - Seasonal and daily statistics\n",
+    "  - Extreme statistics\n",
+    "  - Non-temperature dependent variables, such as aerosols\n",
+    "  - Variables with nonlinear relationship to cumulative co2 emissions, e.g., with hysteresis\n",
+    "  - Downstream climate impact variables, such as storm surge heights.\n",
+    "- Evaluate more metrics:\n",
+    "  - Plot temperature over time for each region of interest, e.g., New England, Beijing, etc.\n",
+    "  -\tEvaluate extremes by calculating CRPS and match of probability density functions\n",
+    "- Incorporate more data from ESGF CMIP6 or custom model runs\n",
+    "- Computationally expensive simulations are ubiquitous in the environmental sciences. There's great value in extending emulator tool to different datasets, other that CMIP6. "
    ]
   },
   {
