fixed table of contents

--- a/climate_emulator_tutorial.ipynb
+++ b/climate_emulator_tutorial.ipynb
@@ -115,13 +115,6 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Introduction"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "id": "yNv0ANr5WcD_"
    },
@@ -129,29 +122,52 @@
     "## Table of Contents\n",
     "\n",
     "*   [Introduction](#Introduction)\n",
-    "    *   [Climate Impact](#Climate-emulators-empower-local-climate-voices)\n",
-    "    *   [Target Audience and Prerequisites](#Target-Audience,-Background,-and-Prerequisites)\n",
+    "    *   [Climate Impact](#Climate-Impact:-Emulators-empower-local-climate-voices)\n",
+    "    *   [Target Audience, Background, and Prerequisites](#Target-Audience,-Background,-and-Prerequisites)\n",
     "    *   [Installation](#Installation)\n",
-    "*   [Data](#data)\n",
-    "    *   [Downloading Climate Model Data](#data-description)\n",
-    "    *   [Data Processing](#data-processing)\n",
-    "    *   [Data Visualization]()\n",
+    "*   [Data](#Data)\n",
+    "    *   [Data Description](#Data-Description)\n",
+    "    *   [Data Download](#Data-Download)\n",
+    "    *   [Data Preprocessing](#data-processing)\n",
+    "    *   [Selecting the in- and output variables](#inputs-and-outputs)\n",
+    "    *   [Data Visualization](#Data-Visualization)\n",
     "*   [Methodology](#methodology)\n",
-    "    *   [Linear Emulators]()\n",
-    "    *   [Machine Learning-based Emulators]()\n",
-    "*   [Results](#results-and-discussion)\n",
-    "    *   [Discussion & Next steps]()\n",
+    "    *   [Piecewise Linear Emulator](#Piecewise-Linear-Emulator)\n",
+    "        * [Global CO2 to T](#linear-co2-to-tas)   \n",
+    "        * [Global T to local T](#global-to-local-tas)   \n",
+    "*   [Results & Discussion](#results-and-discussion)\n",
+    "    *   [Evaluating Climate Emulators](#Evaluating-Climate-Emulators)\n",
+    "    *   [CNN-LSTM: Comparison with a large deep learning model](#cnn-lstm)\n",
+    "    *   [Data vs. model complexity: Polynomial Pattern Scaling](#polynomial-pattern-scaling)\n",
+    "*   [Conclusion](#conclusion)\n",
+    "    *   [Summary](#Summary) \n",
+    "    *   [Next Steps](#Next-Steps) \n",
     "*   [References](#references)\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "QH81wjfsJsv1"
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Climate emulators empower local climate voices\n",
-    "\n",
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "QH81wjfsJsv1",
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Climate Impact: Emulators empower local climate voices"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Rapid climate emulators are already used by policy and decision makers to learn about the impact of climate policies. For example, the [en-roads simulation](https://en-roads.climateinteractive.org/) below lets us rapidly explore the impact of reducing deforestation onto global temperature. However, it's unclear how global mean temperature relates to impacts at the state or city level. In this tutorial, we create an emulator that fills this gap. "
    ]
   },
@@ -180,11 +196,17 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "o5sbM_JPpdMR"
+    "id": "o5sbM_JPpdMR",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Target Audience, Background, and Prerequisites\n",
-    "\n",
+    "## Target Audience, Background, and Prerequisites"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This tutorial is primarily intended for data scientists that are interested in climate modeling. Specifically, we will introduce a novel time-series, video, and real-world dataset that introduces challenges in long-term stability, multiscale spatiotemporal modeling, and physical consistencies. We will also point out learning to Earth scientist. The users of this tutorial are expected to have familiarity with Python, pytorch, general deep learning models, and the deep learning pipeline (dataloader, optmizer, loss fn, etc.). A background in climate science is not necessary. The users will walk away with a notebook on how to access and fit a baseline emulator model on a common climate dataset.\n",
     "\n",
     "Prerequisite references:\n",
@@ -197,7 +219,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "## Installation"
    ]
@@ -260,7 +284,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "# Data"
    ]
@@ -268,18 +294,25 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "jXoiLncsU3pe"
+    "id": "jXoiLncsU3pe",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Data Description\n",
-    "\n",
+    "## Data Description"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "There exist much climate data. Indeed the CMIP6 dataset contains over 20 petabyte (PB) of data from over 50 climate models. The CMIP6 dataset is the primary source for synthesizing climate information to policy and decisionmakers as part of the [IPCC AR6 Report](https://www.ipcc.ch/). Each climate model uses as input a prescribed trajectory of co2, methane, and aerosol emissions, which are called shared socioeconomic pathways (SSPs). Given one scenario, the climate model then solves many differential equations of the atmosphere, ocean, land, and ice on a supercomputer to predict the climate from 1850 to 2100 and outputs a 3D grid of state variables, such as temperature, wind, pressure, and humidity, at typically 30min temporal and 1° spatial resolution with an additional vertical grid. The CMIP6 data contains spatiotemporal averages and downstream variables of those variables. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "PoF-BxSM5Jkc"
+    "id": "PoF-BxSM5Jkc",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "## Data Download"
@@ -342,10 +375,17 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "bSt6h_Q-oqjK"
+    "id": "bSt6h_Q-oqjK",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
-    "## Data Preprocessing <a name=\"data-processing\"></a>\n",
+    "## Data Preprocessing <a name=\"data-processing\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This section formats the raw data into a CO2 -> temp mapping.\n",
     "\n",
     "The raw ClimateBench data contains annual snapshots of temperature, precipitation, extreme precipitation, diurnal temperature and four greenhouse gases (co2, ch4, bc, and so2) from five climate scenario simulations. Each snapshot is a (144 x 96) pixel image (width x length; lon x lat). Three scenarios have only been run on the past (hist-GHG, hist-aer, and historical) containing data from 1850-2014 and four scenarios (ssp126, -245, -370, and -585) have only been run on the future, but stacked with historical data to contain all years from 1850–2100. The data in each scenario is averaged across three realizations; each realization in the ground-truth climate model uses the same forcings, but slightly different initial conditions. The scenarios are detailed in [ClimateBench Table 1](https://doi.org/10.1029/2021MS002954). We hold out one scenario from the 'middle range' (ssp245) and train on the other five to evaluate if a learned model can interpolate."
@@ -465,9 +505,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "## Selecting the in- and output variables"
+    "## Selecting the in- and output variables <a id=\"inputs-and-outputs\"></a>"
    ]
   },
   {
@@ -515,9 +557,17 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Data Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data Visualization:\n",
     "Now, let us plot our learning target and inputs. First, we plot the target surface temperature average from 2080-2100 in the validation set. We can see that there's stronger warming in the Northern than in the Southern Hemisphere. The warming is higher over land than over the Ocean. The Arctic warms particularly fast, which is called Arctic amplification. And the climate model predicts a cooling below Greendland, which is called the North Atlantic warming hole."
    ]
   },
@@ -656,11 +706,12 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "qa9Iuu2GU52Z"
+    "id": "qa9Iuu2GU52Z",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "<a name=\"methodology\"></a>\n",
-    "# Methodology"
+    "# Methodology: Mapping GHGs(t) -> temperature(t)"
    ]
   },
   {
@@ -685,7 +736,7 @@
     "id": "yWXsiZ5freTG"
    },
    "source": [
-    "## Mapping GHGs(t) -> temperature(t):"
+    "## Piecewise Linear Emulator"
    ]
   },
   {
@@ -709,9 +760,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### Linear time-instant: global CO2 -> global tas"
+    "#### Linear time-instant: global CO2 -> global tas<a name=\"linear-co2-to-tas\"></a>"
    ]
   },
   {
@@ -803,9 +856,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
-    "#### Linear pattern scaling: global tas -> local tas"
+    "#### Linear pattern scaling: global tas -> local tas<a name=\"global-to-local-tas\"></a>"
    ]
   },
   {
@@ -852,11 +907,19 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "ZhkmytKNU_Z2"
+    "id": "ZhkmytKNU_Z2",
+    "jp-MarkdownHeadingCollapsed": true
    },
    "source": [
     "<a name=\"results-and-discussion\"></a>\n",
     "# Results & Discussion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluating Climate Emulators"
    ]
   },
   {
@@ -930,7 +993,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### CNN-LSTM: Comparison with a large deep learning model"
+    "### CNN-LSTM: Comparison with a large deep learning model<a name=\"cnn-lstm\"></a>"
    ]
   },
   {
@@ -961,7 +1024,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Data vs. model complexity: Polynomial Pattern Scaling\n",
+    "## Data vs. model complexity: Polynomial Pattern Scaling<a name=\"polynomial-pattern-scaling\"></a>\n",
     "The fact that a linear model outperforms a large deep learning model brings us to the question if more complex models are necessary at all or if a linear model is just fine, for this task? Here, we saw that a linear model achieves most of the accuracy. Nevertheless, we learned that the data is not entirely linear, e.g., in the Arctic. To find the best model complexity, we're demonstrating a new plot: Performance vs. model complexity. If the best performing model is one with low complexity we know that our task is likely not very complex or inherently data limited. \n",
     "\n",
     "To plot performance vs. model complexity we slightly modify the Linear Pattern Scaling model from above. Instead of fitting a linear curve to every grid cell, we are now fitting a polynomial of degree n to each grid cell. Every grid cell has the same polynomial degree, but coefficients that are independent of the other grid cells. The model complexity is determinded by the polynomial degree."
@@ -1133,8 +1196,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a name=\"results-and-discussion\"></a>\n",
-    "# Results & Discussion"
+    "# Conclusion<a name=\"conclusion\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
+    "## Summary"
    ]
   },
   {
@@ -1150,7 +1221,13 @@
     "id": "CLLCQpv14Gsx"
    },
    "source": [
-    "## Next Steps:\n",
+    "## Next Steps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "This tutorial only gives a short insight into machine learning in climate science. There exist many outstanding challenges and we refer to some here:\n",
     "\n",
     "- Modeling more complex variables:\n",
